# rdtools

./: .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  analysis_pipeline.py  logger.py  requirements-min.txt  requirements.txt  requirements.txt.orig  setup.cfg  setup.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  flake8.yaml  nbval.yaml  publish-to-pypi.yaml  pytest-notebook.yaml  pytest.yaml  requirements.yaml  test.yaml  validate_requirements_versus_installed.py
ci/: reqs.txt
docs/: RdAnalysis_example.ipynb  RdAnalysis_example_pvdaq4.ipynb  SystemAnalysis_example.ipynb  System_analysis_example.ipynb  TrendAnalysis_example.ipynb  TrendAnalysis_example_NSRDB.ipynb  TrendAnalysis_example_pvdaq4.ipynb  Untitled.ipynb  clearsky_from_power_test.ipynb  clearsky_test.ipynb  cods_example.ipynb  degradation_and_soiling_example.ipynb  degradation_and_soiling_example_pvdaq_4.ipynb  degradation_and_soiling_example_sanyo.ipynb  degradation_example.ipynb  degradation_example_clearsky.ipynb  degradation_example_merged.ipynb  degradation_example_merged_csv_NREL.ipynb  degradation_example_merged_csv_public.ipynb  degradation_example_merged_pickle_NREL.ipynb  degradation_example_merged_pickle_public.ipynb  degradation_example_outage_detection.ipynb  degradation_example_plotting.ipynb  degradation_example_profiled.ipynb  inverter_downtime_example.ipynb  inverter_downtime_explanation.ipynb  model_plugins_example.ipynb  nbval_sanitization_rules.cfg  notebook_requirements.txt  pipeline example.ipynb  system_availability_example.ipynb  temperature_example.ipynb  timings_lprun.txt  timings_lprun_modified.txt  timings_lprun_original.txt  timings_prun.txt  timings_time.txt  timings_time_modified.txt  timings_time_original.txt  timings_timeit.txt  (+2 more)
docs/.ipynb_checkpoints/: clearsky_from_power_test-checkpoint.ipynb  clearsky_test-checkpoint.ipynb  determine_detect_clearsky_inputs_ga-checkpoint.ipynb
docs/Meta_Data/: sys_meta.xlsx
docs/logos/: 115775-Solar Rd Tools Logo Design_horizontal.eps  115775-Solar Rd Tools Logo Design_stacked.eps
docs/sphinx/: build.bat  (+1 more)
paper/: paper.bib  paper.md
rdtools/: __init__.py  _deprecation.py  _version.py  aggregation.py  analysis.py  analysis_chains.py  availability.py  bootstrap.py  clearsky_temperature.py  degradation.py  energy_normalization.py  filtering.py  filtering_test.ipynb  losses.py  model chain dev notes  normalization.py  plotting.py  qcrad.py  soiling.py  soiling.py.orig  system_analysis.py  utilities.py
rdtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: aggregation_test.py  clearsky_temperature_test.py  degradation_test.py  degradation_test_v1.py  degradation_test_v2.py  energy_normalization_test.py  normalization_pvwatts_test.py  normalization_sapm_test.py  run  run_tests
tools/: __init__.py  energy_normalization.py
(+79 files in other folders)
