# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = rdtools/_version.py
versionfile_build = rdtools/_version.py
tag_prefix = ''
parentdir_prefix = rdtools-

[metadata]
description-file = README.md


[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
# suppress warnings.  syntax is "action:message:category:module:lineno"
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings =
    ignore:The .* module is currently experimental:UserWarning:rdtools
