# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = rdtools/_version.py
versionfile_build = rdtools/_version.py
tag_prefix = ''
parentdir_prefix = rdtools-


[metadata]
description-file = README.md


[bdist_wheel]
universal = 1


[aliases]
test = pytest


[tool:pytest]
addopts = --verbose
# suppress warnings.  syntax is "action:message:category:module:lineno"
# https://docs.python.org/3/library/warnings.html#the-warnings-filter
filterwarnings =
    ignore:The .* module is currently experimental:UserWarning:rdtools

## pytest-notebook configuration:
## https://pytest-notebook.readthedocs.io/en/latest/user_guide/tutorial_config.html

nb_diff_ignore =

    # don't check metadata like which specific version of python 3.7.x was used
    /metadata/language_info

	# the regex replacement below helps, but there's still a bunch of spurious non-text
	# data that the regex doesn't check.  So just ignore all "data" outputs (plots, mostly)
    /cells/*/outputs/*/data

# regex replacements to apply prior to comparing notebook outputs
nb_diff_replace =

    # warning messages (like our experimental warnings) include a filepath which
    # changes based on the installation environment. The filepath itself isn't
    # interesting and doesn't need to be tested, so replace it with some dummy text.
    /cells/*/outputs/*/text ".*: UserWarning:" "FILEPATH: UserWarning:"

    # also blank out the "data" fields *before* running the diff.  otherwise plotly
    # output would make it run several times longer (several tens of minutes?).
   /cells/*/outputs/*/data ".*" ""
